# playground

./: README.md
.github/agents/: readme-specialist.agent.md
fe/vue/use-element-plus/: README.md  package.json
genai/LLMs-from-scratch/: README.md  cross-entropy-pytorch.ipynb  main.py  pyproject.toml
genai/dive-into-claude-agent/: CLAUDE.md  README.md  example.env  main.py  pyproject.toml  todo_tracker.py
